[project]
name = "provavannucci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
provavannucci = "provavannucci:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
